# synapse

./: .gitignore  Cargo.toml  README.md  Re-anchor with Task Codex.md  Synapse_Task_Codex.docx  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: api.ts  colors.ts
src/lib/components/: CardView.svelte  ConfirmDialog.svelte  Dashboard.svelte  Heatmap.svelte  Insights.svelte  KnowledgeGraph.svelte  LineChart.svelte  ReviewSession.svelte  SettingsPanel.svelte  TrackManager.svelte
synapse-core/: Cargo.toml
synapse-core/src/: assets.rs  backup.rs  domain.rs  error.rs  fsrs.rs  gamification.rs  graph.rs  lib.rs  persistence.rs  scheduler.rs  settings.rs  stats.rs  store.rs  window_state.rs
