[package]
name = "synapse"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }
synapse-core = { path = "../synapse-core" }

[features]
# This feature is used for production builds where `devPath` points to the
# filesystem and the built-in dev server is not used. It gets automatically
# enabled by `cargo tauri build`.
custom-protocol = ["tauri/custom-protocol"]
